# neural-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/kgs/: demo.json
docs/: policy.txt
examples/: sample.kg.jsonl
src/neural_rag/: __init__.py  cli.py  config.py  embeddings.py  gnn_rag.py  gnn_retriever.py  kg_data.py  linking.py  lm.py  rag.py  reasoning_paths.py  store.py  subgraph.py
