[project]
name = "neural-rag"
version = "0.2.0"
description = "GNN-RAG scaffold: subgraph retrieval, verbalized reasoning paths, LLM (arXiv:2405.20139)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
# PyTorch 2.4+ is not published for all macOS targets (e.g. x86_64); keep 2.2.x + numpy 1.x + older transformers.
dependencies = [
    "chromadb>=0.5.0",
    "networkx>=3.2.0",
    "torch>=2.2.0,<2.3",
    "numpy>=1.26,<2",
    "transformers>=4.36.0,<4.46.0",
    "sentence-transformers>=3.0.0,<3.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
neural-rag = "neural_rag.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
